--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: event, local: true) do |form| %>
+<%= form_with(model: event, local: true, multipart: true) do |form| %>
   <% if event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -29,6 +29,14 @@
   <div class="row justify-content-center m-2">
     <p style = "width: 400px">Duration : <input style="width:400px; height:30px" type="number" step= 5 min=0 name="duration" value="<%= @event.duration %>"></p>
   </div>
+  <div class="row justify-content-center m-2">
+    <p>Avatar :</p>
+    <p>
+    <%= file_field_tag :avatar %>
+    <%= submit_tag "mettre à jour" %>
+    </p>
+  </div>
+
   <div class="actions text-center mt-5">
     <%= form.submit %>
   </div>
