--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <div class="text-center mt-5">
 <h2> Create your Account ! </h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), multipart: true) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field mt-5">
@@ -35,6 +35,12 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password", :size => 40  %>
+  </div>
+  <div class="row justify-content-center m-2">
+    <p>Avatar :</p>
+    <p>
+    <%= file_field_tag :avatar %>
+    </p>
   </div>
 
   <div class="actions mt-4">
