--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user, local: true, multipart: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -24,6 +24,14 @@
   <div class="row justify-content-center">
     <p style = "width: 200px"> E-mail : <input type="mail" name="mail" value="<%= @user.email %>"></p>
   </div>
+  <div class="row justify-content-center m-2">
+    <p>Avatar :</p>
+    <p>
+    <%= file_field_tag :avatar %>
+    <%= submit_tag "mettre à jour" %>
+    </p>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
